LAYOUT ISSUE FIXED: callendar position is now correct :) Nat

--- a/projekt beta/css/calendar.css
+++ b/projekt beta/css/calendar.css
@@ -22,7 +22,7 @@
     font-family: Raleway;
     /*background-image: linear-gradient(#4e0497, #db2549);*/
     background-color: #fff;
-    margin-right: 0;
+    margin: 0 auto;
 }
 
 
